--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
     "firebase": "^3.6.4",
+    "fuzzy": "^0.1.3",
+    "fuzzysearch": "^1.0.3",
     "hammerjs": "^2.0.8",
     "primeng": "^2.0.0-rc.2",
     "rxjs": "5.0.0-beta.12",
